# ow_cat

./: .gitignore  CMakeLists.txt  README.md  build.ps1  vcpkg.json
include/core/: dictionary_manager.h  engine.h  llama_predictor.h  pinyin_converter.h  prediction_engine.h  types.h
include/platform/: platform_manager.h
include/platform/linux/: linux_ime_adapter.h
include/platform/macos/: macos_ime_adapter.h
include/platform/windows/: windows_ime_adapter.h
include/ui/: gtk_ui.h
src/: main.cpp
src/app/: CMakeLists.txt
src/core/: CMakeLists.txt  dictionary_manager.cpp  engine.cpp  llama_predictor.cpp  pinyin_converter.cpp  prediction_engine.cpp
src/platform/: CMakeLists.txt  platform_manager.cpp
src/platform/linux/: CMakeLists.txt  linux_candidate_window.cpp  linux_ime_adapter.cpp  linux_input_engine.cpp  linux_system_integration.cpp
src/platform/macos/: CMakeLists.txt  macos_candidate_window.cpp  macos_ime_adapter.cpp  macos_input_controller.cpp  macos_system_integration.cpp
src/platform/windows/: windows_candidate_window.cpp  windows_ime_adapter.cpp  windows_ime_message_handler.cpp  windows_system_integration.cpp
src/ui/: CMakeLists.txt  gtk_about_dialog.cpp  gtk_candidate_window.cpp  gtk_main_window.cpp  gtk_settings_dialog.cpp  gtk_status_icon.cpp  gtk_theme_manager.cpp  gtk_ui.cpp
